# Real

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/RealProject/: AddShaderCompilationTarget.cmake  AddShaderReflectionTarget.cmake  AddShaderTarget.cmake  CollateShaders.cmake  GenerateCppFiles.cmake  RealProject.cmake  Utility.cmake
cmake/RealProject/engine_only_include/RealShaders/: CMakeConstants.hpp
cmake/RealProject/include/RealShaders/: CppIntegration.glsl  DefineAlignedTypes.hpp  DefineSwizzlingMacros.hpp  GlslIntegration.hpp  GlslIntegrationBegin.hpp  GlslIntegrationEnd.hpp  Std140AlignedTypes.hpp  UndefSwizzlingMacros.hpp
cmake/RealProject/src/: HeaderWrapper.hpp.in
cmake/RealProject/static_code_gen/: GenerateAlignedTypes.py  GenerateStd140AlignedTypes.py
cmake/RealProject/templates/: AllShaders.hpp.in  HeaderWrapper.hpp.in  ProjectHotReloadInfo.hpp.in  ProjectSetup.hpp.in  ShaderWrapper.cpp.in  ShaderWrapper.hpp.in
cmake/RealProjects/: CollateShaders.cmake  RealProject.cmake
doc/: HowToSetUpProject.md  NamingConvetion.md
